--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body {
 	width: 100%;
 	background-color: #CAE4DB;
 	padding: 20px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font: 14px "Ubuntu", Helvetica, Arial, sans-serif;
 }
 
 a {
@@ -44,6 +44,9 @@ a {
 
 .title {
 	padding: 10px;
+	font-family: 'Ubuntu', sans-serif;
+	margin-top: 55px;
+	margin-left: -85px;
 }
 
 
@@ -65,6 +68,7 @@ a {
 	margin-left: -30px;
 	margin-top: 100px;
 	padding: 40px;
+	margin-bottom: 20px;
 }
 
 .home {
@@ -78,6 +82,7 @@ a {
 
 .name {
 	font-family: "Pacifico", cursive;
+	font-size: 45px;
 }
 
 .pr-image {
@@ -90,6 +95,7 @@ a {
 .web-image {
 	height: 300px;
 	width: 425px;
+	padding: 5px;
 }
 
 .page-header {
@@ -101,13 +107,13 @@ a {
 }
 
 .project-image {
-	margin-left: 10px;
-	width: 40%;
+	padding: 10px;
+	width: 43%;
 }
 
 .project {
 	background-color: #7A9D96;
-	padding: 30px;
+	padding: 25px;
 	display: flex;
 	margin-top: 30px;
 }
@@ -117,9 +123,9 @@ a {
 	background-color: black;
 	opacity: 0.8;
 	border: none;
-	border-radius: 20%;
-	height: 40px;
-	width: 25px;
+	border-radius: 50%;
+	height: 30px;
+	width: 30px;
 }
 
 .project-title {
@@ -139,4 +145,64 @@ a {
 	text-align: center
 }
 
-/* #7A9D96 */
+.interest {
+	background-color: #00303F;
+	border: 1px solid white;
+	height: 300px;
+	padding: 10px;
+}
+
+.interest-photo {
+	width: 100%;
+	height: 280px;
+	opacity: 0.7;
+
+}
+
+
+.interest-text {
+	color: white;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #00303F;
+}
+
+.container-hover:hover .overlay {
+  opacity: 1;
+}
+
+.overlay-text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  height: 60%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+
+.profile-link{
+	padding: 10px;
+    border: 2px solid black;
+    background-color: #00303F;
+    color: white;
+    margin: 10px;
+
+}
+
+.link-holder {
+	margin-top: 25px;
+}
