--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,10 +64,10 @@ a {
 #about-me {
 	background-color: #7A9D96;
 	text-align: center;
-	height: 200px;
+	height: 100px;
 	margin-left: -30px;
 	margin-top: 100px;
-	padding: 40px;
+	padding: 10px;
 	margin-bottom: 20px;
 }
 
@@ -78,6 +78,9 @@ a {
 #intro {
 	font-size: 18px;
 	font-family: 'Lato';
+	padding-left: 30px;
+	width: 100%;
+	margin-bottom: 50px;
 }
 
 .name {
@@ -205,4 +208,79 @@ a {
 
 .link-holder {
 	margin-top: 25px;
+}
+
+.job{
+	display: flex;
+	justify-content: space-between;
+	border: 2px solid #00303F;
+	align-items: center;
+	margin: 10px;
+}
+
+.work-logo{
+	padding: 30px;
+	height: 250px;
+	width: auto;
+}
+
+/*.company{
+	margin: 10px;
+}*/
+
+
+.position {
+	margin-top: 25px;
+	margin-left: 10px;
+}
+
+.dates {
+	margin: 5px;
+}
+
+.position-header {
+	display: flex;
+	margin: 5px;
+	justify-content: center;
+}
+
+.contact {
+	margin: 20px;
+}
+
+.project-link {
+	padding: 10px;
+    border: 1px solid black;
+    background-color: #DCAE1D;
+	margin: 10px;
+	height: 20px;
+	width: 30px;
+	font-size: 10px;
+	font-color: black
+}
+
+.project-responsibilites {
+	color: white;
+}
+
+.project-details {
+	color: white;
+}
+
+.details-header {
+	color: white;
+}
+
+.project-more {
+	margin: 20px;
+
+}
+
+.project-links{
+	height: 30px;
+	margin-top: 10px;
+}
+
+a {
+	color: black;
 }
